--- a/assets/css/tip-calculator.css
+++ b/assets/css/tip-calculator.css
@@ -19,4 +19,104 @@ body{
     width: 920px;
     margin-top: 88px;
     margin-inline: auto;
+    border-radius: 25px;
+    background: #FFF;
+    box-shadow: 0px 32px 43px 0px rgba(79, 166, 175, 0.20);
+    padding: 32px;
+    display: flex;
+}
+
+.left-side-container{
+    padding: 13px 48px 16px 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.bill-container{
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+
+.heading{
+    color: #5E7A7D;
+}
+
+.input-container{
+    border-radius: 5px;
+    background: #F3F9FA;
+    padding: 6px 17px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 2px solid transparent;
+}
+
+.input-element{
+    text-align: right;
+    font-size: 24px;
+    outline: none;
+    background:transparent;
+    font-family: 'Space Mono', monospace;
+    border: none;
+    color: #00474B;
+}
+
+.input-element::placeholder{
+    color: #00474B;
+    opacity: .3;
+}
+
+.discount-btn-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.select-tip-container{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.discount-btn-container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    row-gap: 16px;
+    column-gap: 14px;
+}
+
+.discount-btn{
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    padding: 10px 30px;
+    justify-self: center;
+    text-decoration: none;
+    border-radius: 5px;
+    background: #00474B;
+    color: #FFF;
+    font-size: 24px;
+}
+
+#custom-discount{
+    border-radius: 5px;
+    background: #F3F9FA;
+    color: #00474B;
+    font-size: 24px;
+    padding: 10px 30px;
+    border: 2px solid transparent;
+}
+#custom-discount::placeholder{
+    text-align: center;
+    opacity: .6;
+}
+
+
+#custom-discount:focus{
+    border: 2px solid #26C2AE;
+}
+
+#bill-input:focus #bill-input-container{
+    border: 2px solid #26C2AE !important;
 }
