--- a/assets/css/tip-calculator.css
+++ b/assets/css/tip-calculator.css
@@ -24,13 +24,17 @@ body{
     box-shadow: 0px 32px 43px 0px rgba(79, 166, 175, 0.20);
     padding: 32px;
     display: flex;
+    justify-content: space-between;
 }
 
+/* Left Side Started */
+
 .left-side-container{
-    padding: 13px 48px 16px 16px;
+    margin: 13px 0px 16px 16px;
     display: flex;
     flex-direction: column;
     gap: 40px;
+    width: 379px;
 }
 
 .bill-container{
@@ -87,11 +91,11 @@ body{
 }
 
 .discount-btn{
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    padding: 10px 30px;
-    justify-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 118px;
+    height: 48px;
     text-decoration: none;
     border-radius: 5px;
     background: #00474B;
@@ -104,19 +108,64 @@ body{
     background: #F3F9FA;
     color: #00474B;
     font-size: 24px;
-    padding: 10px 30px;
+    width: 118px;
+    height: 48px;
     border: 2px solid transparent;
+    padding: 6px 13px;
 }
+
 #custom-discount::placeholder{
     text-align: center;
     opacity: .6;
 }
 
-
 #custom-discount:focus{
     border: 2px solid #26C2AE;
 }
 
-#bill-input:focus #bill-input-container{
-    border: 2px solid #26C2AE !important;
+/* Left Side Ended */
+
+/* Right Side Started */
+
+.right-side-container{
+    padding: 40px;
+    border-radius: 15px;
+    background: #00474B;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 413px;
 }
+
+.right-side-input-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.right-side-heading{
+    color: #FFF;
+    font-size: 16px;
+}
+
+.heading-container span{
+    color: #7F9D9F;
+    font-size: 13px;
+}
+
+.result{
+    color: #26C2AE;
+    font-size: 48px;
+    letter-spacing: -1px;
+}
+
+.reset-btn{
+    border-radius: 5px;
+    background: #26C2AE;
+    text-decoration: none;
+    color: #00474B;
+    text-align: center;
+    font-size: 20px;
+    padding: 10px;
+}
+/* Right Side Ended */
