Js tarafında gerekli butonlar seçildi. Her biri için fonksiyon atanacak.

--- a/assets/css/tip-calculator.css
+++ b/assets/css/tip-calculator.css
@@ -161,7 +161,7 @@ body{
 
 .reset-btn{
     border-radius: 5px;
-    background: #26C2AE;
+    background: #0D686D;
     text-decoration: none;
     color: #00474B;
     text-align: center;
