--- a/assets/css/tip-calculator.css
+++ b/assets/css/tip-calculator.css
@@ -157,6 +157,8 @@ body{
     color: #26C2AE;
     font-size: 48px;
     letter-spacing: -1px;
+    max-width: 200px;
+    overflow-y: hidden;
 }
 
 .reset-btn{
