--- a/assets/css/tip-calculator.css
+++ b/assets/css/tip-calculator.css
@@ -72,11 +72,6 @@ body{
     opacity: .3;
 }
 
-.discount-btn-container{
-    display: flex;
-    flex-direction: column;
-}
-
 .select-tip-container{
     display: flex;
     flex-direction: column;
@@ -101,6 +96,7 @@ body{
     background: #00474B;
     color: #FFF;
     font-size: 24px;
+    transition: background .3s ease;
 }
 
 #custom-discount{
@@ -169,6 +165,7 @@ body{
     text-align: center;
     font-size: 20px;
     padding: 10px;
+    transition: background .3s ease;
 }
 /* Right Side Ended */
 
@@ -186,4 +183,15 @@ body{
 
 .reset-btn.not-active{
     pointer-events: none;
+}
+
+/* Hover Effects */
+
+.reset-btn:not(.not-active):hover{
+    background: #9FE8DF;
+}
+
+.discount-btn:not(.active):hover{
+    background: #9FE8DF;
+    color: #00474B;
 }
