JS işlemleri tamamlandı. Kod fazlalıklarından kurtulunda gerekli kodlar yerleştirildi. Reset butonu aktif edildi.

--- a/assets/css/tip-calculator.css
+++ b/assets/css/tip-calculator.css
@@ -207,4 +207,9 @@ body{
     color: #E17457;
     text-align: right;
     font-size: 16px;
+    display: none;
+}
+
+.zero.active{
+    display: block;
 }
