--- a/assets/css/tip-calculator.css
+++ b/assets/css/tip-calculator.css
@@ -24,7 +24,7 @@ body{
     box-shadow: 0px 32px 43px 0px rgba(79, 166, 175, 0.20);
     padding: 32px;
     display: flex;
-    justify-content: space-between;
+    gap: 48px;
 }
 
 /* Left Side Started */
@@ -80,17 +80,14 @@ body{
 
 .discount-btn-container{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
     row-gap: 16px;
     column-gap: 14px;
 }
 
 .discount-btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 118px;
-    height: 48px;
+    text-align: center;
+    padding: 10px;
     text-decoration: none;
     border-radius: 5px;
     background: #00474B;
@@ -100,12 +97,11 @@ body{
 }
 
 #custom-discount{
+    width: 100%;
     border-radius: 5px;
     background: #F3F9FA;
     color: #00474B;
     font-size: 24px;
-    width: 118px;
-    height: 48px;
     border: 2px solid transparent;
     padding: 6px 13px;
 }
@@ -153,8 +149,6 @@ body{
     color: #26C2AE;
     font-size: 48px;
     letter-spacing: -1px;
-    max-width: 200px;
-    word-break:break-all;
 }
 
 .reset-btn{
@@ -212,4 +206,12 @@ body{
 
 .zero.active{
     display: block;
+}
+
+/* Remove Number Arrows */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
